# pylingual-docker

./: .dockerignore  .gitmodules  Dockerfile  README.md
pylingual-server/: main.py  pyproject.toml
scripts/: download_models.py
